Kubernetes/EKS/app/server-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: crud-server
  ports:
    - name: crud
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: app
  labels:
    app: crud-server
spec:
  replicas: 4
  selector:
    matchLabels:
      app: crud-server
  template:
    metadata:
      labels:
        app: crud-server
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: crud
                  operator: In
                  values:
                  - app
              topologyKey: topology.kubernetes.io/zone
            weight: 100
      imagePullSecrets:
      - name: regcred
      containers:
      - name: crud
        image: oleksandriyskiy/crud:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
